@@ -37,7 +37,7 @@
             android:layout_marginBottom="156dp"
             android:layout_marginEnd="8dp"
             android:layout_marginStart="8dp"
-            android:text="Last build on 06.03.2018"
+            android:text="Last build on 01.04.2018"
             android:textColor="#000000"
             android:textSize="18dp"
             app:layout_constraintBottom_toBottomOf="parent"
