@@ -42,7 +42,8 @@
 
 1.04.2018
     1. Çıkış yaptıktan sonra geri butonu ile anasayfaya gelme sorunu giderildi. (loginIntent.addFlags(Intent.FLAG_ACTIVITY_CLEAR_TOP | Intent.FLAG_ACTIVITY_NEW_TASK);)
-    2. kullanıcı adı ve şifre " admin ", " admin " olarak güncellendi.admadmi
+    2. kullanıcı adı ve şifre " admin ", " admin " olarak güncellendi.
+    3. Profil Fragmentdaki butonlardan direkt olarak istenilen ayarlara gidilebiliyor. (Intent ve putExtra Kullanıldı.)
 ----------------------------------------------------------------------------
 
 
